[package]
name = "forgelink-cli"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI for generating shareable URLs to files in hosted git repositories"
readme = "../../README.md"
repository = "https://github.com/dpassen/forgelink"
keywords = ["git", "forge", "url", "cli", "permalink"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "forgelink"
path = "src/main.rs"

[dependencies]
forgelink = { path = "../forgelink", version = "0.1.2" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
arboard = { version = "3", optional = true }
open = { version = "5", optional = true }

[features]
default = ["clipboard", "browser"]
clipboard = ["dep:arboard"]
browser = ["dep:open"]
