[package]
name = "forgelink"
version = "0.4.0"
edition = "2024"
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Forge detection and URL generation for hosted git repositories"
readme = "README.md"
repository = "https://github.com/dpassen/forgelink"
keywords = ["git", "forge", "url", "github", "gitlab"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
dunce = "1"
gix = { version = "0.85", default-features = false, features = ["sha1"] }
thiserror = "2"
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
